--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@
 # http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
 
 [metadata]
-name = Tyche
+name = tyche
 description = Add a short description here!
 author = Kostadin Cvejoski
 author-email = cvejoski@gmail.com
